# socmed-metrics

./: .gitignore  LICENSE  README.md  extract_data.py  plotter.py  pyproject.toml
ansible/: .gitignore  deploy_all.yml  docker_provision.yml  root_provision.yml  test_playbook.yml
ansible/roles/geerlingguy.docker/meta/: .galaxy_install_info
ansible/roles/geerlingguy.pip/meta/: .galaxy_install_info
ansible/roles/selenium/tasks/: main.yml
scripts/: additional_toquery.py  generator.py  similars.py  testplot.py
