[project]
name = "socmed-metrics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dash==2.18.0",
    "dash-bootstrap-components>=1.7.1",
    "pandas>=3.0.1",
    "pytz>=2026.1.post1",
    "requests>=2.32.5",
    "selenium<4",
    "urllib3>=2.6.3",
    "watchdog>=6.0.0",
    "webdriver-manager>=4.0.2",
]
